--- a/grid_coloumnas.html
+++ b/grid_coloumnas.html
@@ -16,9 +16,17 @@
     </div>
     
     <div class="row">
-        <div class="col s4 green">4</div>
-        <div class="col s4 blue">4</div>
-        <div class="col s4 red">4</div>
+        <div class="col s4 green">menu</div>
+        <div class="col s4 blue">aside</div>
+        <div class="col s4 red">footer</div>
     </div> 
+
+    <div class="row">
+        <div class="col s12 green"> Nav-Barra de navegacion</div>
+        <div class="col s12 blue"> Main</div>
+        <div class="col s12 red"> Footer o pie de página</div>
+        <div class="col s6 yellow"> Seccion</div>
+        <div class="col s6 pink"> Aside o barra lateral</div>
+    </div>
 </body>
 </html>
